agrego color a los textos

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <footer id="contacto">
 
         <div class="footer-bg">
-            <h1>Cotiza tu presupuesto</h1>
+            <h1 style="color: white;">Cotiza tu presupuesto</h1>
 
             <form action="">
                 <div class="campo-1">
